[package]
name = "cgosling"
build = "build.rs"
authors = ["Richard Pospesel <richard@blueprintforfreespeech.net>"]
version = "0.2.0"
rust-version = "1.66"
edition = "2021"

[build-dependencies]
cbindgen = "0.20.0"
regex = "1.10.2"
serde = "1.0.193"
serde_json = "1.0"


[dependencies]
anyhow = "1.0"
bson = "2.2.0"
gosling = { version = "0.1.0", path = "../gosling" }
paste = "1.0"
static_assertions = "1.1.0"
tor-interface = { version = "0.2.0", path = "../tor-interface" }
which = "4.3.0"

[lib]
name = "cgosling"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
offline-test = ["gosling/offline-test"]