[package]
name = "gosling-ffi"
build = "build.rs"
authors = ["Richard Pospesel <richard@blueprintforfreespeech.net>"]
version = "0.0.1"
rust-version = "1.66"
edition = "2021"

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
bson = "2.2.0"
gosling = { version = "0.0.1", path = "../gosling" }
paste = "1.0"
static_assertions = "1.1.0"
which = "4.3.0"

[lib]
name = "gosling"
crate-type = ["staticlib"]
