[package]
name = "gosling"
authors = ["Richard Pospesel <richard@blueprintforfreespeech.net>"]
version = "0.1.1"
rust-version = "1.70"
edition = "2021"
license = "BSD-3-Clause"
description = "A library for developing fully anonymous, peer-to-peer, metadata-resistant applications using tor onion services"
homepage = "https://blueprint-freespeech.github.io/gosling/index.xhtml"
repository = "https://github.com/blueprint-freespeech/gosling"

[dependencies]
bson = "2.0"
data-encoding = "2.0"
honk-rpc = { version = "0.1", path = "../honk-rpc" }
num_enum = "0.6"
rand = "0.8"
thiserror = "1.0"
tor-interface = { version = "0.2", path = "../tor-interface" }

[dev-dependencies]
anyhow = "1.0"
serial_test = "0.9"
which = "4.4"

[features]
mock-tor-provider = ["tor-interface/mock-tor-provider"]
legacy-tor-provider = ["tor-interface/legacy-tor-provider"]
