[package]
name = "gosling"
authors = ["morgan <morgan@torproject.org>", "Richard Pospesel <richard@blueprintforfreespeech.net>"]
version = "0.5.2"
rust-version = "1.70"
edition = "2021"
license = "BSD-3-Clause"
description = "A library for developing fully anonymous, peer-to-peer, metadata-resistant applications using tor onion services"
homepage = "https://blueprint-freespeech.github.io/gosling/index.xhtml"
repository = "https://github.com/blueprint-freespeech/gosling"

[package.metadata.docs.rs]
features = ["arti-client-tor-provider", "legacy-tor-provider", "mock-tor-provider"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
bson = "2.0"
data-encoding = "2.0"
honk-rpc = { version = "0.3", path = "../honk-rpc" }
num_enum = "0.6"
rand = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
tor-interface = { version = "0.6.2", path = "../tor-interface" }

[dev-dependencies]
anyhow = "1.0"
serial_test = "0.9"
which = "4.4"

[features]
arti-client-tor-provider = ["tokio", "tor-interface/arti-client-tor-provider"]
mock-tor-provider = ["tor-interface/mock-tor-provider"]
legacy-tor-provider = ["tor-interface/legacy-tor-provider"]
