[package]
name = "honk-rpc"
authors = ["Richard Pospesel <richard@blueprintforfreespeech.net>"]
version = "0.1.0"
rust-version = "1.66"
edition = "2021"
license = "BSD-3-Clause"
description = "A library implementing an asynchrynous, bi-directional, dynamic, and BSON-based remote procedure call system"
repository = "https://github.com/blueprint-freespeech/gosling"

[dependencies]
bson = "2.2.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
data-encoding = "2.3.2"
sha3 = "0.10.8"
