[package]
name = "honk-rpc"
authors = ["Richard Pospesel <richard@blueprintforfreespeech.net>"]
version = "0.1.1"
rust-version = "1.63"
edition = "2021"
license = "BSD-3-Clause"
description = "A library implementing an asynchrynous, bi-directional, dynamic, and BSON-based remote procedure call system"
repository = "https://github.com/blueprint-freespeech/gosling"

[dependencies]
bson = ">= 2.0, <= 2.4.0"
thiserror = "^1"

[dev-dependencies]
anyhow = "^1"
data-encoding = "^2"
sha3 = "^0.10"
