[package]
name = "tor-interface"
authors = ["Richard Pospesel <richard@blueprintforfreespeech.net>"]
version = "0.3.0"
rust-version = "1.70"
edition = "2021"
license = "BSD-3-Clause"
description = "A library providing a Rust interface to interact with the legacy tor daemon"
keywords = ["tor", "anonymity"]
repository = "https://github.com/blueprint-freespeech/gosling"

[dependencies]
arti-client = { version = "0.20.0", features = ["experimental-api", "onion-service-client", "onion-service-service", "tokio"], optional = true}
curve25519-dalek = "4.1"
data-encoding = "2.0"
data-encoding-macro = "0.1"
domain = "<= 0.10.0"
fs-mistrust = { version = "0", optional = true }
idna = "1"
rand = "0.8"
rand_core = "0.6"
regex = "1.9"
sha1 = "0.10"
sha3 = "0.10"
signature = "1.5"
socks = "0.3"
static_assertions = "1.1"
thiserror = "1.0"
tokio = { version = "1", features = ["macros"], optional = true }
tokio-stream = { version = "0", optional = true }
tor-cell = { version = "0.20.0", optional = true }
tor-config = { version = "0.20.0", optional = true }
tor-hscrypto = { version = "0.20.0", optional = true }
tor-hsservice = { version = "0.20.0", optional = true }
tor-keymgr = { version = "0.20.0", optional = true, features = ["keymgr"] }
tor-llcrypto = { version = "0.20.0", features = ["relay"] }
tor-persist = { version = "0.20.0", optional = true }
tor-proto = { version = "0.20.0", features = ["stream-ctrl"], optional = true }
tor-rtcompat = { version = "0.20.0", optional = true }

[dev-dependencies]
anyhow = "1.0"
serial_test = "0.9"
which = "4.4"

[features]
arti-client-tor-provider = ["arti-client", "fs-mistrust", "tokio", "tokio-stream", "tor-cell", "tor-config", "tor-hscrypto", "tor-hsservice", "tor-keymgr", "tor-persist", "tor-proto", "tor-rtcompat"]
mock-tor-provider = []
legacy-tor-provider = []
