[package]
name = "tor-interface"
authors = ["morgan <morgan@torproject.org>", "Richard Pospesel <richard@blueprintforfreespeech.net>"]
version = "0.4.0"
rust-version = "1.70"
edition = "2021"
license = "BSD-3-Clause"
description = "A library providing a Rust interface to interact with the legacy tor daemon"
keywords = ["tor", "anonymity"]
repository = "https://github.com/blueprint-freespeech/gosling"

[dependencies]
arti-client = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "0956b386580d5d75983a8faff4e3043654936698", features = ["ephemeral-keystore", "experimental-api", "keymgr", "onion-service-client", "onion-service-service", "tokio"], optional = true}
curve25519-dalek = "4.1"
data-encoding = "2.0"
data-encoding-macro = "0.1"
domain = "<= 0.10.0"
idna = "1"
rand = "0.8"
rand_core = "0.6"
regex = "1.9"
sha1 = "0.10"
sha3 = "0.10"
signature = "1.5"
socks = "0.3"
static_assertions = "1.1"
thiserror = "1.0"
tokio = { version = "1", features = ["macros"], optional = true }
tokio-stream = { version = "0", optional = true }
tor-cell = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "0956b386580d5d75983a8faff4e3043654936698", optional = true }
tor-config = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "0956b386580d5d75983a8faff4e3043654936698", optional = true }
tor-hsservice = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "0956b386580d5d75983a8faff4e3043654936698", optional = true, features = ["restricted-discovery"] }
tor-keymgr = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "0956b386580d5d75983a8faff4e3043654936698", optional = true, features = ["keymgr"] }
tor-llcrypto = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "0956b386580d5d75983a8faff4e3043654936698", features = ["relay"] }
tor-proto = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "0956b386580d5d75983a8faff4e3043654936698", features = ["stream-ctrl"], optional = true }
tor-rtcompat = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "0956b386580d5d75983a8faff4e3043654936698", optional = true }

[dev-dependencies]
anyhow = "1.0"
serial_test = "0.9"
which = "4.4"

[features]
arti-client-tor-provider = ["arti-client", "tokio", "tokio-stream", "tor-cell", "tor-config", "tor-hsservice", "tor-keymgr", "tor-proto", "tor-rtcompat"]
mock-tor-provider = []
legacy-tor-provider = []
