[package]
name = "cgosling-fuzz"
version = "0.0.0"
rust-version = "1.63"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "^0.4", features = ["arbitrary-derive"] }

[dependencies.cgosling]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_cgosling"
path = "fuzz_targets/fuzz_cgosling.rs"
test = false
doc = false
